# seymourlib

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  publish.yml
src/seymourlib/: cli.py  client.py  discovery.py  exceptions.py  protocol.py  transport.py
tests/: test_client.py  test_client_concurrency.py  test_discovery.py  test_protocol.py  test_transport.py
