[build-system]
requires = ["uv_build>=0.9.13"]
build-backend = "uv_build"

[project]
name = "seymourlib"
version = "0.1.3"
description = "Python client for Seymour masking screens, connected via direct serial or Global Caché iTach IP2SL"
keywords = ["seymour", "masking", "screen", "serial", "itach", "ip2sl", "home-assistant"]
authors = [{name = "Richard Berg", email = "ars@richardberg.net"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=3.4",
    "attrs>=25.4.0",
    "tenacity>=8.0",
    "async-typer>=0.1.10",
]

[project.urls]
homepage = "https://github.com/richard-berg/seymourlib"
source = "https://github.com/richard-berg/seymourlib.git"
issues = "https://github.com/richard-berg/seymourlib/issues"


[project.optional-dependencies]
serial = [
    "pyserial_asyncio>=0.6",
]

[dependency-groups]
test = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2",
    "coverage>=7",
    "pyserial_asyncio>=0.6",
    "pytest-cov>=7.0.0",
]
lint = [
    "ruff>=0.6",
]
typecheck = [
    "mypy>=1.10",
    "types-setuptools",
]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
    "ipython>=7",
]

[tool.uv]
package = true
default-groups = ["dev"]

[project.scripts]
seymourctl = "seymourlib.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true
unsafe-fixes = false
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # warnings
    "I",   # import sorting
    "UP",  # pyupgrade
    "B",   # bugbear
    "ASYNC", # async best practices
]
lint.ignore = [
    "E501", # line length handled separately
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ----------------------------------------
# mypy configuration
# ----------------------------------------
[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict = true

# Ignore missing type hints in dependencies, except ours
ignore_missing_imports = true

# ----------------------------------------
# Pytest configuration
# ----------------------------------------
[tool.pytest.ini_options]
addopts = "-q --timeout=30 --cov --cov-branch --cov-report=xml"
asyncio_mode = "auto"
testpaths = ["tests"]
